--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,18 @@
 ---
+cwa_agent_install: True
+cwa_agent_manage: True
+
 cwa_path: "/opt/aws/amazon-cloudwatch-agent"
 cwa_pkg: "amazon-cloudwatch-agent"
 cwa_metrics:
   agent:
     metrics_collection_interval: 60
-    logfile: "/opt/aws/amazon-clouwatch-agent.log"
+    logfile: "/var/log/amazon-cloudwatch-agent.log"
   metrics:
     metrics_collected:
       disk:
         resources:
           - "/"
-          - "/tmp"
         measurement:
           - "used_percent"
         append_dimensions:
