--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@
 
 services: docker
 
+install:
+  - pip install flask
+  - pip install moto
+
 env:
   - distro: ubuntu1404
   - distro: ubuntu1604
