--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -26,7 +26,7 @@
 
   - name: Install rpm
     yum:
-      rpm: "{{cwa_tmp}}/amazon-cloudwatch-agent.rpm"
+      name: "{{cwa_tmp}}/amazon-cloudwatch-agent.rpm"
     when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
   when: cwa_install_from_zip
 
