Realized this task doesn't actually cover bionic

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,9 +25,9 @@
 
     - name: start and enable cwa-agent service
       service: name=amazon-cloudwatch-agent state=started enabled=yes
-      when: ansible_distribution_release == 'trusty'
+      when: ansible_service_mgr != 'systemd'
 
     - name: Start and enable cwa-agent systemd service
       systemd: name=amazon-cloudwatch-agent state=started enabled=yes daemon_reload=yes
-      when: ansible_distribution_release == 'xenial' or ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+      when: ansible_service_mgr == 'systemd'
     when: cwa_agent_manage
